--- a/src/components/Button/Primary/Primary.css
+++ b/src/components/Button/Primary/Primary.css
@@ -11,42 +11,42 @@
 
 @media (prefers-color-scheme: light) {
     .button--primary {
-        background-color: var(--color-secondary);
+        background-color: var(--color-medium-primary);
         color: var(--color-dark-grey);
     }
 
     .button--primary:hover {
-        background-color: var(--color-tertiary);
+        background-color: var(--color-light-primary);
     }
 
     .button--primary:active {
-        background-color: var(--color-primary);
+        background-color: var(--color-dark-primary);
         color: var(--color-light-grey);
     }
 
     .button--primary:disabled {
-        background-color: var(--color-tertiary);
+        background-color: var(--color-light-primary);
         color: var(--color-dark-grey);
     }
 }
 
 @media (prefers-color-scheme: dark) {
     .button--primary {
-        background-color: var(--color-primary);
+        background-color: var(--color-dark-primary);
         color: var(--color-light-grey);
     }
 
     .button--primary:hover {
-        background-color: var(--color-secondary);
+        background-color: var(--color-medium-primary);
     }
 
     .button--primary:active {
-        background-color: var(--color-tertiary);
+        background-color: var(--color-light-primary);
         color: var(--color-dark-grey);
     }
 
     .button--primary:disabled {
         background-color: var(--color-dark-grey);
-        color: var(--color-tertiary);
+        color: var(--color-light-primary);
     }
 }
