--- a/src/components/Notification/Info/Text/Text.css
+++ b/src/components/Notification/Info/Text/Text.css
@@ -1,5 +1,5 @@
 /* Notification info text styles */
-.text--paragraph.notification__main-container--info__content-container__content__text {
+.text--small.notification__main-container--info__content-container__content__text {
     text-align: start;
-    color: var(--color-dark-secondary);
+    color: var(--color-light-grey);
 }
