--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
     --scale-transition-duration: 0.25s;
     --opacity-transition-duration: 0.25s;
     --animation-move-duration: 0.5s;
-    --input--horizontal-padding: 1.4rem;
+    --input--horizontal-padding: 1.2rem;
     --outline-width: 0.2rem;
     --icon-size: 2rem;
     --icon-weight: 500;
@@ -41,10 +41,10 @@
     --text--small--font-size: 1.4rem;
     --text--small--font-weight: 500;
     --text--small--letter-spacing: 1px;
-    --text--label--font-size: 1.6rem;
+    --text--label--font-size: 1.4rem;
     --text--label--font-weight: 500;
     --text--label--letter-spacing: 2px;
-    --text--input--font-size: 1.8rem;
+    --text--input--font-size: 1.6rem;
     --text--input--font-weight: 300;
     --text--input--letter-spacing: 0;
     --text--button--font-size: 1.6rem;
@@ -52,7 +52,7 @@
     --text--button--letter-spacing: 2px;
     --text--link--font-size: 1.6rem;
     --text--link--font-weight: 600;
-    --text--link--letter-spacing: 1px;
+    --text--link--letter-spacing: 1px
 }
 
 /* Global Styles */
@@ -83,6 +83,7 @@
 /* HTML and Body */
 html, body {
     height: 100%;
+    background-color: var(--background-color);
 }
 
 /* List */
