test: snapshot of the verify email page implementation

--- a/src/layouts/Auth/Auth.css
+++ b/src/layouts/Auth/Auth.css
@@ -54,6 +54,7 @@
 .auth__main-container__right-container__content-container__title-container__title {
     grid-column: 1/2;
     grid-row: 1/-1;
+    justify-self: start;
     text-align: left;
     padding-left: var(--input--horizontal-padding);
 }
