--- a/src/index.css
+++ b/src/index.css
@@ -110,3 +110,28 @@ li {
         --text--background-color: var(--color-light-grey);
     }
 }
+
+/* Loading container styles */
+.app__loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+/* Spinner styles */
+.app__loading-container__spinner {
+    width: 5rem;
+    height: 5rem;
+    border: 1rem solid var(--color-dark-primary);
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
