feat: implemented Not Found page
* Implemented Not Found page
* Added useTimer custom hook
* Separated modal and background as components

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 .app__main-container__app-container {
     grid-row: 1/-1;
     grid-column: 1/-1;
-    height: 100%;
-    width: 100%;
+    display: grid;
+    grid-template-columns: subgrid;
+    grid-template-rows: subgrid;
 }
