--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -1,5 +1,5 @@
 /* Icon component styles */
-.icon {
+.icon__container {
     font-size: var(--icon-size);
     font-weight: var(--icon-weight);
     height: min-content;
