--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,13 +1,18 @@
 /* Modal main container styles */
-.modal__main-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: grid;
-    place-items: center;
+.modal__container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: var(--background-color);
-    z-index: 1000;
-    backdrop-filter: blur(5px);
+    padding: 8rem 6rem;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 85rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem;
+    box-shadow: 0 0.25rem 0.5rem 0.1rem var(--color-dark-grey);
 }
