--- a/src/index.css
+++ b/src/index.css
@@ -135,3 +135,23 @@ li {
         transform: rotate(360deg);
     }
 }
+
+@keyframes moveBottom {
+    from {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+@keyframes appear {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
