--- a/src/layouts/Auth/Auth.css
+++ b/src/layouts/Auth/Auth.css
@@ -1,18 +1,29 @@
 /* Auth main container styles */
 .auth__main-container {
-    background-image: url('/key--1980x1114.webp');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    grid-row: 1/-1;
+    grid-column: 1/-1;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-rows: subgrid;
     place-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+}
+
+/* Background styles */
+.auth__main-container__background {
+    z-index: 1;
+    grid-row: 1/-1;
+    grid-column: 1/-1;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    object-position: center;
 }
 
 /* Right container styles */
 .auth__main-container__right-container {
+    z-index: 2;
     grid-column: 6/-1;
     grid-row: 1/-1;
     background-color: var(--background-color);
@@ -55,6 +66,7 @@
     grid-column: 1/2;
     grid-row: 1/-1;
     justify-self: start;
+
     text-align: left;
     padding-left: var(--input--horizontal-padding);
 }
