--- a/src/layouts/Auth/Auth.css
+++ b/src/layouts/Auth/Auth.css
@@ -72,7 +72,7 @@
 }
 
 /* Logo styles */
-.logo--graphic-text__container.logo {
+.asset--logo--graphic-text__container.logo {
     grid-column: 2/-1;
     grid-row: 1/-1;
 }
@@ -151,14 +151,14 @@
         padding-left: 0;
     }
 
-    .logo--graphic-text__container.logo {
+    .asset--logo--graphic-text__container.logo {
         display: none;
     }
 }
 
 @media (max-width: 400px) {
-    .app__main-container {
-        background-image: none;
+    .auth__main-container__background.asset--background__container {
+        display: none;
     }
 
     .auth__main-container__right-container {
