test: added snapshot of the home layout implementation
* Added snapshot of the home layout implementation
* Modified logo components implementation

--- a/src/components/Assets/Logo/Graphic/Graphic.css
+++ b/src/components/Assets/Logo/Graphic/Graphic.css
@@ -9,5 +9,5 @@
 .asset--logo--graphic__container__svg {
     grid-row: 1 / -1;
     grid-column: 1 / -1;
-    height: var(--graphic-size);
+    height: var(--logo--graphic--size);
 }
