--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -1,6 +1,6 @@
 /* Icon component styles */
 .icon__container {
-    font-size: var(--icon-size);
-    font-weight: var(--icon-weight);
+    font-size: var(--icon--size);
+    font-weight: var(--icon--weight);
     height: min-content;
 }
