refactor: substituted LogIn context width session storage
* Substituted LogIn context width session storage
* Improved Modal component
* Added resend email code action to 2FA email code page

--- a/src/components/Link/Link.css
+++ b/src/components/Link/Link.css
@@ -3,7 +3,7 @@
     font-size: var(--text--link--font-size);
     font-weight: var(--text--link--font-weight);
     letter-spacing: var(--text--link--letter-spacing);
-
+    text-decoration: underline;
 }
 
 .link__text,
