--- a/src/components/Reference/Reference.css
+++ b/src/components/Reference/Reference.css
@@ -5,12 +5,12 @@
     grid-template-rows: 1fr;
 }
 
-.reference__container * {
+.reference__container > * {
     grid-row: 1/-1;
     width: auto;
     display: inline-block;
 }
 
-.reference__container *:not(:first-child) {
+.reference__container > *:not(:first-child) {
     padding-left: 1rem;
 }
