--- a/src/layouts/Home/Home.css
+++ b/src/layouts/Home/Home.css
@@ -3,10 +3,12 @@
     grid-row: 1/-1;
     grid-column: 1/-1;
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 1fr;
     justify-items: center;
     align-items: center;
+    background-color: var(--color-medium-grey);
+    gap: 1px;
     height: 100%;
     width: 100%;
     overflow: hidden;
@@ -24,6 +26,26 @@
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+/* Header container styles */
+.home__main-container__menu-container__header-container,
+.home__main-container__notes-container__header-container,
+.home__main-container__note-container__header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+/* Header styles */
+.home__main-container__menu-container__header-container__header,
+.home__main-container__notes-container__header-container__header,
+.home__main-container__note-container__header-container__header {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    width: 100%;
 }
 
 /* Menu search container styles */
@@ -44,7 +66,6 @@
     z-index: 1;
     grid-column: 3/6;
     grid-row: 1/-1;
-    background: green;
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -53,12 +74,16 @@
     height: 100%;
 }
 
+/* Note styles */
+.home__main-container__notes-container__note{
+    animation: appear-and-move-a-bit-up var(--animation-move-duration) ease-in-out forwards;
+}
+
 /* Note container styles */
 .home__main-container__note-container {
     z-index: 2;
     grid-column: 6/-1;
     grid-row: 1/-1;
-    background-color: red;
     display: flex;
     flex-direction: column;
     justify-items: center;
@@ -68,11 +93,10 @@
 }
 
 /* Buttons styles */
-.home__main-container__menu-container__menu-button,
-.home__main-container__notes-container__menu-button,
-.home__main-container__note-container__notes-button {
+.home__main-container__menu-container__header-container__header__button,
+.home__main-container__notes-container__header-container__header__button,
+.home__main-container__note-container__header-container__header__button {
     display: none;
-    background: cornflowerblue;
 }
 
 .home__main-container__menu-container,
@@ -80,6 +104,8 @@
 .home__main-container__notes-container {
     transition: move-right var(--animation-move-duration) ease-in-out,
     move-left var(--animation-move-duration) ease-in-out;
+    padding: 1rem 3.6rem;
+    background-color: var(--background-color);
 }
 
 /* Responsive styles */
@@ -109,8 +135,8 @@
         animation: move-to-left var(--animation-move-duration) ease-in-out forwards;
     }
 
-    .home__main-container__menu-container__menu-button,
-    .home__main-container__notes-container__menu-button {
+    .home__main-container__menu-container__header-container__header__button,
+    .home__main-container__notes-container__header-container__header__button {
         display: block;
     }
 }
@@ -141,7 +167,13 @@
         animation: move-to-right var(--animation-move-duration) ease-in-out forwards;
     }
 
-    .home__main-container__note-container__notes-button {
-        display: block;
+    .home__main-container__note-container__header-container__header__button {
+        display: block
+    }
+
+    .home__main-container__menu-container,
+    .home__main-container__note-container,
+    .home__main-container__notes-container {
+        padding: 1rem 2rem;
     }
 }
