--- a/src/layouts/Home/Home.css
+++ b/src/layouts/Home/Home.css
@@ -99,6 +99,7 @@
     display: none;
 }
 
+/* Containers styles */
 .home__main-container__menu-container,
 .home__main-container__note-container,
 .home__main-container__notes-container {
