--- a/src/components/ColorPalette/ColorPalette.css
+++ b/src/components/ColorPalette/ColorPalette.css
@@ -4,18 +4,20 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
-    gap: 0.6rem;
+    gap: 0.4rem;
 }
 
 /* Text styles */
-.color-palette__main-container__text {}
+.color-palette__main-container__text {
+    padding-bottom: var(--label--gap);
+}
 
 /* Color container styles */
 .color-palette__main-container__colors-container{
     display: flex;
     justify-items: center;
     align-items: center;
-    gap: var(--label--gap);
+    gap: 0.6rem;
 }
 
 /* Color styles */
