--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -1,3 +1,40 @@
 /* Note main container styles */
 .note__main-container {
+    border-radius: 4px;
+    outline: var(--outline-width) solid transparent;
+    width: 100%;
+}
+
+/* Header container styles */
+.note__main-container__header-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+/* Header styles */
+.note__main-container__header-container__header {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    gap: 1.6rem;
+    width: 100%;
+}
+
+.note__main-container__header-container__header.text--paragraph{
+    overflow: hidden;
+    text-align: center;
+}
+
+/* Content styles */
+.note__main-container__content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.6rem;
+    text-align: center;
 }
