--- a/src/layouts/Home/Home.css
+++ b/src/layouts/Home/Home.css
@@ -35,6 +35,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 2.4rem;
     width: 100%;
 }
 
@@ -70,6 +71,7 @@
     flex-direction: column;
     justify-items: center;
     align-items: center;
+    gap: 1rem;
     width: 100%;
     height: 100%;
 }
