test: implementing note deletion

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
     --animation-move-duration: 0.5s;
     --input--horizontal-padding: 1.2rem;
     --outline-width: 0.2rem;
+    --border-width: 0.2rem;
     --icon--size: 2rem;
     --icon--weight: 500;
     --logo--graphic--size: 4rem;
