--- a/src/components/Note/Note.css
+++ b/src/components/Note/Note.css
@@ -1,16 +1,18 @@
 /* Note main container styles */
 .note__main-container {
     border-radius: 4px;
-    outline: var(--outline-width) solid transparent;
+    border: var(--border-width) solid transparent;
+    padding: 0.6rem 1rem;
     width: 100%;
 }
 
 /* Header container styles */
 .note__main-container__header-container{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 0.4rem;
     width: 100%;
 }
 
@@ -27,6 +29,20 @@
 .note__main-container__header-container__header.text--paragraph{
     overflow: hidden;
     text-align: center;
+}
+
+/* Icons container styles */
+.note__main-container__header-container__icons-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+/* Icons styles */
+.note__main-container__header-container__icons-container>*{
+    cursor: pointer;
+    transition: color var(--opacity-transition-duration);
 }
 
 /* Content styles */
