--- a/src/layouts/Home/Home.css
+++ b/src/layouts/Home/Home.css
@@ -4,13 +4,13 @@
     grid-column: 1/-1;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-rows: auto 1fr;
     justify-items: center;
     align-items: center;
     background-color: var(--color-medium-grey);
     gap: 1px;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
 
@@ -32,10 +32,11 @@
 .home__main-container__menu-container__header-container,
 .home__main-container__notes-container__header-container,
 .home__main-container__note-container__header-container {
+    grid-row:1/2;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 2.4rem;
+    height: min-content;
     width: 100%;
 }
 
@@ -77,7 +78,7 @@
 }
 
 /* Note styles */
-.home__main-container__notes-container__note{
+.home__main-container__notes-container__content-container__content {
     animation: appear-and-move-a-bit-up var(--animation-move-duration) ease-in-out forwards;
 }
 
@@ -105,12 +106,34 @@
 .home__main-container__menu-container,
 .home__main-container__note-container,
 .home__main-container__notes-container {
+    grid-row: 1/-1;
     transition: move-right var(--animation-move-duration) ease-in-out,
     move-left var(--animation-move-duration) ease-in-out;
-    padding: 1rem 3.6rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: subgrid;
+    place-items: center;
+    gap: 2.4rem;
+    padding: 1.2rem 2rem;
     background-color: var(--background-color);
 }
 
+/* Content styles */
+.home__main-container__menu-container__content-container,
+.home__main-container__notes-container__content-container,
+.home__main-container__note-container__content-container{
+    grid-row: 2/-1;
+    align-self: start;
+}
+
+/* Overflow styles */
+.home__main-container__notes-container__content-container__content{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    gap: 1rem;
+}
 
 /* Responsive styles */
 @media (max-width: 1200px) {
@@ -145,6 +168,14 @@
     }
 }
 
+/* Buttons container styles */
+.home__note-deletion-modal__buttons-container{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    gap: 1rem;
+}
+
 @media (max-width: 800px) {
     .home__main-container {
         grid-template-columns: 1fr
@@ -177,7 +208,7 @@
 
     .home__main-container__menu-container,
     .home__main-container__note-container,
-    .home__main-container__notes-container {
+    .modal__content-container__notes-container__content-container {
         padding: 1rem 2rem;
     }
 }
