--- a/src/layouts/Home/Home.css
+++ b/src/layouts/Home/Home.css
@@ -18,36 +18,6 @@
 .home__main-container__menu-container {
     z-index: 2;
     grid-column: 1/3;
-    grid-row: 1/-1;
-    background: yellow;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-}
-
-/* Header container styles */
-.home__main-container__menu-container__header-container,
-.home__main-container__notes-container__header-container,
-.home__main-container__note-container__header-container {
-    grid-row:1/2;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: min-content;
-    width: 100%;
-}
-
-/* Header styles */
-.home__main-container__menu-container__header-container__header,
-.home__main-container__notes-container__header-container__header,
-.home__main-container__note-container__header-container__header {
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
-    width: 100%;
 }
 
 /* Menu search container styles */
@@ -62,19 +32,9 @@
 .home__main-container__menu-container__tags-container {
 }
 
-
 /* Notes container styles */
 .home__main-container__notes-container {
-    z-index: 1;
     grid-column: 3/6;
-    grid-row: 1/-1;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
-    gap: 1rem;
-    width: 100%;
-    height: 100%;
 }
 
 /* Note styles */
@@ -87,19 +47,14 @@
     z-index: 2;
     grid-column: 6/-1;
     grid-row: 1/-1;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
 }
 
-/* Buttons styles */
-.home__main-container__menu-container__header-container__header__button,
-.home__main-container__notes-container__header-container__header__button,
-.home__main-container__note-container__header-container__header__button {
-    display: none;
+/* Buttons container styles */
+.home__note-deletion-modal__buttons-container{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    gap: 1rem;
 }
 
 /* Containers styles */
@@ -107,32 +62,65 @@
 .home__main-container__note-container,
 .home__main-container__notes-container {
     grid-row: 1/-1;
-    transition: move-right var(--animation-move-duration) ease-in-out,
-    move-left var(--animation-move-duration) ease-in-out;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: subgrid;
     place-items: center;
     gap: 2.4rem;
     padding: 1.2rem 2rem;
+    width: 100%;
+    height: 100%;
     background-color: var(--background-color);
+    transition: move-right var(--animation-move-duration) ease-in-out,
+    move-left var(--animation-move-duration) ease-in-out;
 }
 
-/* Content styles */
+/* Header containers styles */
+.home__main-container__menu-container__header-container,
+.home__main-container__notes-container__header-container,
+.home__main-container__note-container__header-container {
+    grid-row:1/2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: min-content;
+    width: 100%;
+}
+
+/* Headers styles */
+.home__main-container__menu-container__header-container__header,
+.home__main-container__notes-container__header-container__header,
+.home__main-container__note-container__header-container__header {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+/* Header buttons styles */
+.home__main-container__menu-container__header-container__header__button,
+.home__main-container__notes-container__header-container__header__button,
+.home__main-container__note-container__header-container__header__button {
+    display: none;
+}
+
+
+/* Content container styles */
 .home__main-container__menu-container__content-container,
 .home__main-container__notes-container__content-container,
 .home__main-container__note-container__content-container{
     grid-row: 2/-1;
     align-self: start;
+    width: 100%;
 }
 
-/* Overflow styles */
+/* Content styles */
 .home__main-container__notes-container__content-container__content{
     display: flex;
     flex-direction: column;
     justify-items: center;
     align-items: center;
     gap: 1rem;
+    width: 100%;
 }
 
 /* Responsive styles */
@@ -166,14 +154,6 @@
     .home__main-container__notes-container__header-container__header__button {
         display: block;
     }
-}
-
-/* Buttons container styles */
-.home__note-deletion-modal__buttons-container{
-    display: flex;
-    align-items: center;
-    justify-items: center;
-    gap: 1rem;
 }
 
 @media (max-width: 800px) {
